fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,7 @@ footer img {
     flex-direction: row;
     width: 100%;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .links {
